batch-mode/language-model-batch-workflow-derive/tests/trybuild/fail_missing_batch_client.stderr
error: cannot find attribute `batch_workspace` in this scope
  --> tests/trybuild/fail_missing_batch_client.rs:14:7
   |
14 |     #[batch_workspace]
   |       ^^^^^^^^^^^^^^^

error: cannot find attribute `expected_content_type` in this scope
  --> tests/trybuild/fail_missing_batch_client.rs:16:7
   |
16 |     #[expected_content_type]
   |       ^^^^^^^^^^^^^^^^^^^^^

error: cannot find attribute `model_type` in this scope
  --> tests/trybuild/fail_missing_batch_client.rs:18:7
   |
18 |     #[model_type]
   |       ^^^^^^^^^^
   |
note: `model_type` is imported here, but it is a module, not an attribute
  --> tests/trybuild/fail_missing_batch_client.rs:7:5
   |
7  | use batch_mode_batch_workflow::*;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `language_model_batch_workflow_derive::LanguageModelBatchWorkflow`
 --> tests/trybuild/fail_missing_batch_client.rs:6:5
  |
6 | use language_model_batch_workflow_derive::LanguageModelBatchWorkflow;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
